frontend/static/css/index.css
/* ... */
.small-login {
    position: relative;
    top: 40px;
    right: 15px;
}

/* Signup Form ---------------------------------------------------------- */

/* Create Post ---------------------------------------------------------- */

.create-post-container {
    background-color: #FFF;
    width: 900px;
    height: 100%;
    margin: 0 auto 0 auto;
    font-family: 'Roboto';
    box-shadow: 1px 1px 1px 1px #aaa;
}

.create-post-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.uploaded-image {
    margin: 40px auto 10px auto;
    background-color: #ccc;
    border-radius: 5px;
    width: 450px;
    height: 450px;
    display: flex;
    align-items: center;
}

.uploaded-image > img {
    max-width: 100%;
    max-height: 100%;
}

.browse-button {
    background-color: #bbb;
    border: 1px solid rgba(0, 0, 0, 0.3);
    border-radius: 5px;
    padding: 5px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: x-small;
    z-index: 2;

    position: relative;
    bottom: 50px;
    left: 160px;

    transition: border 0.2s, background-color 0.2s ease-in-out;
}

.browse-button:hover {
    border: 1px solid rgba(0, 0, 0, 0.6);
    background-color: #aaa;
}

.browse-button > svg {
    width: 15px;
    height: 15px;
}

.create-post-form > #heading-text {
    border: 1px solid var(--primary);
    width: 81%;
    border-radius: 5px;
    padding: 10px;
    line-height: 5px;
    resize: none;
    box-shadow: none;
    outline: none;
}

.create-post-form > #caption-text {
    border: 1px solid var(--primary);
    border-radius: 5px;
    padding: 10px;
    line-height: 20px;
    resize: none;
    box-shadow: none;
    outline: none;
    transition: outline 0.2s ease-in-out;
}

.create-post-form > textarea:focus {
    outline: var(--secondary) solid 1px;
}

.create-post-button {
    margin-top: 20px;
    font-family:'Roboto';
    background-color: var(--secondary);
	padding: 12px 20px 12px 20px;
	cursor: pointer;
	outline: inherit;
    border: none;
    border-radius: 20px;
}

/* Create Post ---------------------------------------------------------- */

/* Feed Section ---------------------------------------------------------- */

.feed-section {
    display: flex;
    flex-direction: column;
    align-items: center;

    margin: auto;

    width: 100%;
    height: 100%;
    padding-top: 20px;
    font-family: 'Roboto';

    overflow-y: auto;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.feed-section::-webkit-scrollbar {
    display: none;
}



.post-card {
    background-color: white;
    border: 1px solid #aaa;
    border-radius: 5px;
    width: 800px;
    margin: 20px;
}

.post-card:hover {
    border: 1px solid #555;
}

.post-info-section {
    width: 100%;
    height: 30px;
    background-color: #bbb;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #aaa;
}

.profile-name-tag {
    color: var(--primary);
    text-decoration: none;
    margin: 10px;
    transition: color 0.2s ease-in-out;
    
}

.profile-name-tag:hover {
    color: black;
    text-decoration: underline;
}

.post-content {
    padding: 0px 30px 20px 30px;
}

.heading-text {
    font-size: 25px;
    font-weight: 600;
}

.post-image {
    margin: auto 90px auto 90px;
    width: calc(100% - 180px);
    border-radius: 3px;
}


/* Feed Section ---------------------------------------------------------- */

/* Search Section ---------------------------------------------------------- */

.search-wrapper {
    background-color: #FFF;
    width: 600px;
    height: 100%;
    margin: 0 auto 0 auto;
    font-family: 'Roboto';
    box-shadow: 1px 1px 1px 1px #aaa;
}

.search-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding-top: 10px;
}

.search-bar button {
    background-color: var(--secondary);
    border: 1px solid #aaa;
    border-radius: 5px;
    cursor: pointer;
}

.search-bar svg {
    color: white;
    width: 31px;
    height: 31px;
}

.search-bar input {
    height: 32px;
    border: 1px solid var(--primary);
    border-radius: 5px;
}

.search-results-wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 5px;
}

.profile-element-wrapper {
    height: 100px;
    width: 280px;
    background-color: #ddd;
    margin: 10px 5px 10px 5px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.profile-element-wrapper:hover {
    border: 1px solid #aaa;
}

.profile-element-wrapper > img {
    float: left;
    position: relative;
    left: 10px;
    top: 10px;
    border-radius: 3px;
}

.profile-element-wrapper > .profile-element-info {
    float: right;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: relative;
    right: 30px;
}

.profile-element-info > p {
    margin-bottom: -5px;
}

/* Search Section ---------------------------------------------------------- */

/* Prrofile Section ---------------------------------------------------------- */

.profile-wrapper {
    height: 100%;
    overflow-y: auto;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.profile-wrapper::-webkit-scrollbar {
    display: none;
}

.profile-info {
    background-color: #FFF;
    width: 600px;
    height: 200px;
    margin: 10px auto 0 auto;
    font-family: 'Roboto';
    box-shadow: 1px 1px 1px 1px #aaa;
    border-radius: 10px 10px 0px 0px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.profile-avatar > img {
    border-radius: 50%;
    margin-left: 20px;
}

.profile-general-info {
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
/* ... */

